--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,9 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price'])>len(rest)"
+    "    if len(restaurant['price'])>len(restaurant['price']):\n",
+    "        return restaurant\n",
+    "    "
    ]
   },
   {
