--- a/index.ipynb
+++ b/index.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price'])>len(restaurant['price']):\n",
+    "    if len(restaurant['price'])>len(alternative['price']):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Frontier Restaurant\n",
+      "Fork & Fig\n",
       "Fork & Fig\n"
      ]
     }
