--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']:\n",
-    "        "
+    "        else:\n",
+    "            "
    ]
   },
   {
