Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']:\n",
     "        else:\n",
-    "            "
+    "            print restaurant"
    ]
   },
   {
