Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "        if restaurant['is closed']:\n",
     "        else:\n",
     "            print restaurant\n",
-    "    "
+    "    return restaurant"
    ]
   },
   {
