Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-16-f72d8da1df36>, line 4)",
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(restaurant)? (<ipython-input-17-039ae0927eb1>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-f72d8da1df36>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-039ae0927eb1>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print restaurant\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(restaurant)?\n"
      ]
     }
    ],
@@ -299,6 +299,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']:\n",
+    "            pass\n",
     "        else:\n",
     "            print restaurant\n",
     "    return restaurant"
