--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_r\n",
+    "    open_restaurant_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']:\n",
     "            pass\n",
