Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "        if restaurant['is closed']:\n",
     "            pass\n",
     "        else:\n",
-    "            o\n",
+    "            open_restaurant_list.append(rest)\n",
     "    return restaurant"
    ]
   },
