--- a/index.ipynb
+++ b/index.ipynb
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurant_list = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is closed']:\n",
+    "        if restaurant['is_closed']:\n",
     "            pass\n",
     "        else:\n",
     "            open_restaurant_list.append(restaurant)\n",
